--- a/Caidi.App/Caidi.App.csproj
+++ b/Caidi.App/Caidi.App.csproj
@@ -17,5 +17,6 @@
     <PackageReference Include="Avalonia" Version="0.10.0" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.0" />
+    <PackageReference Include="FFMpegCore" Version="3.4.0" />
   </ItemGroup>
 </Project>
